--- a/index.html
+++ b/index.html
@@ -47,6 +47,11 @@
           <!-- color 3dc9b3 -->
 
           <section class="hero" id="hero" style="margin-bottom: -200px">
+            <div class="fullscreen-bg">
+            <video class="fullscreen-bg__video" width="100%" height="auto" muted loop autoplay poster="img/guitar.jpg">
+                <source src="img/guitar.mp4" type="video/mp4" webkitallowfullscreen mozallowfullscreen allowfullscreen>
+            </video>
+          </div>
             <div class="container">
               <div class="row">
                 <div class="col-md-12 text-right navicon">
@@ -55,8 +60,8 @@
               </div>
               <div class="row">
                 <div class="col-md-8 col-md-offset-2 text-center inner">
-                  <h1 class="animated fadeInDown" style="color:#3dc9b3; font-family: Lato Heavy"><b>SWEETEST SOUNDS <br style="padding-top:2px; color:#3dc9b3">MUSIC CENTER</b></br></h1>
-                  <p class="animated fadeInUp delay-05s" style="font-size:25px; color:#fff">Equipping and Training the Next Generation of Rockstars</p>
+                  <h1 class="animated fadeInDown" style="color:#3ae; font-family: Lato Heavy; text-shadow: 2px 1.5px 1.5px black "><b>SWEETEST SOUNDS <br style="padding-top:2px; color:#3ae">MUSIC CENTER</b></br></h1>
+                  <p class="animated fadeInUp delay-05s" style="font-size:25px; color:#fff"><b>Teaching &amp; Equipping the Next Generation of <i>Rockstars</i></b></p>
                   <a style="margin-top:120px" href="#intro" class="down-arrow-btn"><i class="fa fa-chevron-down"></i></a>
                 </div>
               </div>
@@ -72,55 +77,55 @@
           <div class="container">
             <div class="row">
               <div class="col-md-8 col-md-offset-2 wp1">
-                <h1 class="arrow">About Us  <nobr style="font-size: 10px; color:#3dc9b3" rel="tooltip" title="Click the call, email, or contact text to get in touch.">(?)</nobr></h1>
-                <p style="font-size: 15px">Sweetest Sounds is a full-service music store catering to Northern New Jersey. We are committed to impeccable quality and customer satisfaction. Feel free to <a href="tel:2019332257">call</a> or <a href="mailto:ssmusic350@verizon.net">e-mail</a> us with any questions about a specific product or service that you are interested in.
+                <h1 class="arrow">About Us  <nobr style="font-size: 15px; color:#3ae" rel="tooltip" title="Click the call, email, or contact text to get in touch.">(?)</nobr></h1>
+                <p style="font-size: 20px">Sweetest Sounds is a full-service music store catering to Northern NJ &amp; the Tri-State Area. <b style="color:black">Our facility offers sales, rentals, lessons and repairs of musical instruments and accessories.</b> We are committed to impeccable quality and customer satisfaction. Feel free to <a href="tel:2019332257">call</a> or <a href="mailto:ssmusic350@verizon.net">e-mail</a> us with any questions about a specific product or service that you are interested in.
                 Additional contact information can be found in our site's <a href="#contact">contact section</a>. We look forward to helping you in person - our Lyndhurst store business hours are listed here:</p>
           <table border="0" cellpadding="2" width="20%" bgcolor="#f3f5f8" align="center" style="margin-top:15px">
           <tr>
             <td align="center" bgcolor="#f3f5f8" colspan="2"><u>
-            <font size="3"  color="#353535">Business Hours</font></u></td>
+            <font size="3"  color="#353535"><b>Business Hours</b></font></u></td>
           </tr>
           <tr>
             <td width="37" align="center" bgcolor="#f3f5f8">
-            <font  size="3" color="#8c9398">Mon. </font></td>
+            <font  size="3" color="#333">Mon. </font></td>
             <td align="center" bgcolor="#f3f5f8">
-            <font  size="3" color="#8c9398">11:00-8:30</font></td>
+            <font  size="3" color="#333">11:00-8:30</font></td>
           </tr>
           <tr>
             <td width="37" align="center" bgcolor="#f3f5f8">
-            <font  size="3" color="#8c9398">Tues.</font></td>
+            <font  size="3" color="#333">Tues.</font></td>
             <td align="center" bgcolor="#f3f5f8">
-            <font  size="3" color="#8c9398">11:00-8:00</font></td>
+            <font  size="3" color="#333">11:00-8:00</font></td>
           </tr>
           <tr>
             <td width="37" align="center" bgcolor="#f3f5f8">
-            <font  size="3" color="#8c9398">Wed.</font></td>
+            <font  size="3" color="#333">Wed.</font></td>
             <td align="center" bgcolor="#f3f5f8">
-            <font  size="3" color="#8c9398">11:00-8:30</font></td>
+            <font  size="3" color="#333">11:00-8:30</font></td>
           </tr>
           <tr>
             <td width="37" align="center" bgcolor="#f3f5f8">
-            <font  size="3" color="#8c9398">Thurs.</font></td>
+            <font  size="3" color="#333">Thurs.</font></td>
             <td align="center" bgcolor="#f3f5f8">
-            <font  size="3" color="#8c9398">11:00-8:00</font></td>
+            <font  size="3" color="#333">11:00-8:00</font></td>
           </tr>
           <tr>
             <td width="37" align="center" bgcolor="#f3f5f8">
-            <font  size="3" color="#8c9398">Fri.</font></td>
+            <font  size="3" color="#333">Fri.</font></td>
             <td align="center" bgcolor="#f3f5f8">
-            <font  size="3" color="#8c9398">11:00-8:00</font></td>
+            <font  size="3" color="#333">11:00-8:00</font></td>
           </tr>
           <tr>
             <td width="37" align="center" bgcolor="#f3f5f8">
-            <font  size="3" color="#8c9398">Sat.</font></td>
+            <font  size="3" color="#333">Sat.</font></td>
             <td align="center" bgcolor="#f3f5f8">
-            <font  size="3" color="#8c9398">10:30-5:00</font></td>
+            <font  size="3" color="#333">10:30-5:00</font></td>
           </tr>
           <tr>
             <td width="37" align="center" bgcolor="#f3f5f8">
-            <font  size="3" color="#8c9398">Sun.</font></td>
+            <font  size="3" color="#333">Sun.</font></td>
             <td align="center" bgcolor="#f3f5f8">
-            <font  size="3" color="#8c9398">CLOSED</font></td>
+            <font  size="3" color="#333">CLOSED</font></td>
           </tr>
         </table>
               </div>
@@ -131,11 +136,11 @@
           <div class="container">
             <div class="row">
               <div class="col-md-12">
-                <h1 class="arrow">Our Main Services  <nobr style="font-size: 10px; color:#3dc9b3" rel="tooltip" title="Here are our offerings. If you're interested in learning more, feel free to call or visit our store.">(?)</nobr></h1>
+                <h1 class="arrow">What We Can Do For You <nobr style="font-size: 15px; color:#3ae" rel="tooltip" title="Here are our offerings. If you're interested in learning more, feel free to call or visit our store.">(?)</nobr></h1>
                 <div class="features-wrapper">
                   <div class="col-md-4 wp2">
-                    <div class="icon">
-                      <i class="fa fa-music shadow"></i>
+                    <div>
+                      <img src="img/instsale.jpg" alt="Instrument Sales" style="width:75%">
                     </div>
                     <h2>Instrument Sales &amp; Rentals</h2>
                     <p>We provide the highest quality, name-brand instruments for schools as well as individual players. We also sell new and used band instruments. Our rental selection includes Clarinets, Alto Saxes, Tenor Saxes, Soprano Saxes, Flutes, Snare Drum Kits, Trombones, Trumpets, Violins, and Guitars/Basses.</p>
@@ -155,8 +160,8 @@
                     <p>The teachers at Sweetest Sounds Music Center can work with students of any level, from beginners wanting to learn the art of music to experienced players looking to brush up on theory. We have experienced teachers, affordable rates, and no registration fees. We look forward to helping you with your continuing music education.</p>
                   </div>
                   <div class="col-md-4 wp2" style="margin-top:20px">
-                    <div class="icon">
-                      <i class="fa fa-microphone shadow"></i>
+                    <div>
+                      <img src="img/audsale.jpg" alt="Audio Sales" style="width:75%">
                     </div>
                     <h2>Pro Audio Sales</h2>
                     <p>Sweetest Sounds has a complete selection of microphones, speakers, mixers, and outboard gear as well as all the cables to make the necessary connections in-stock. Come down to our retail location to get a hands-on demo of our huge assortment of gear for your studio or band. We can help you get set up for whatever you have in mind, whether it's recording or performing.</p>
@@ -165,7 +170,7 @@
                     <div class="icon">
                       <i class="fa fa-volume-up shadow"></i>
                     </div>
-                    <h2>Pro Audio Rentals</h2>
+                    <h2>Equipment Rentals</h2>
                     <p>If you don't need to purchase professional-grade audio tools, you can just rent them from us. We have a complete line of PA equipment ready for your next gig or event. We provide the best audio equipment at a fraction of the regular cost. Please contact us for rates on everything from microphones and cables to powered mixers and speakers.</p>
                   </div>
                   <div class="col-md-4 wp2 delay-1s" style="margin-top:20px">
@@ -197,15 +202,15 @@
                   <div id="servicesSlider">
                     <ul class="slides">
                       <li>
-                        <h1 class="arrow">Guitar &amp; Bass  <nobr style="font-size: 10px; color:#3dc9b3" rel="tooltip" title="Here's a highlight of our guitar and bass offerings.">(?)</nobr></h1>
+                        <h1 class="arrow">Guitar &amp; Bass  <nobr style="font-size: 15px; color:#3ae" rel="tooltip" title="Here's a highlight of our guitar and bass offerings.">(?)</nobr></h1>
                         <p>We carry electric and acoustic guitars and basses, including models from Fender, Gibson, Ibanez and more. Stop by to see our complete selection of more than 300 in-stock instruments ready for you to play. Our expert staff will help you make the right decision when you are ready to buy. We also have a complete line of amps, pre-amps, speaker cabinets and effect pedals to complement your playing style and help you achieve that perfect tone.</p>
                       </li>
                       <li>
-                        <h1 class="arrow">Drums &amp; Percussion  <nobr style="font-size: 10px; color:#3dc9b3" rel="tooltip" title="Here's an overview of our drum and percussion selection.">(?)</nobr></h1>
+                        <h1 class="arrow">Drums &amp; Percussion  <nobr style="font-size: 15px; color:#3ae" rel="tooltip" title="Here's an overview of our drum and percussion selection.">(?)</nobr></h1>
                         <p>We have a complete inventory of drums, cymbals, percussion, and accessories from Pearl, Tama, Zildjian, Sabian, Vic Firth, Pro Mark and many others. Additionally, our in-stock stick inventory is sure to have the perfect pair. Whether you're looking for an entry level kit or something to help get your sound to the next level, we have what you need. Stop by our store to see our complete inventory of percussion instruments.</p> 
                       </li>
                       <li>
-                        <h1 class="arrow">Keyboards &amp; Synthesizers  <nobr style="font-size: 10px; color:#3dc9b3" rel="tooltip" title="Here's a quick glance at our keyboard and synth lineup.">(?)</nobr></h1>
+                        <h1 class="arrow">Keyboards &amp; Synthesizers  <nobr style="font-size: 15px; color:#3ae" rel="tooltip" title="Here's a quick glance at our keyboard and synth lineup.">(?)</nobr></h1>
                         <p>We have an assortment of electric pianos and synthesizers for both beginners and professional musicians. Keyboards and synths are a great tool for bands, pianists, and composers. Stop by to see our complete selection of instruments.</p> 
                       </li>
                     </ul>
@@ -220,8 +225,8 @@
           <div class="container">
             <div class="row">
               <div class="col-md-8 col-md-offset-2">
-                <h1>Interested in Used and Vintage Instruments?</span></h1>
-                <a target="_blank" href="http://www.ebay.com/sch/i.html?LH_SpecificSeller=1&_sasl=sweetestsounds&_fss=1&_saslop=1&LH_PrefLoc=1&_armrs=1&_from=R6&_ipg=&_mPrRngCbx=1&_sargn=-1%252&_udhi=&_udlo=" class="ignite-btn">Check Out What We've Got!</a>
+                <h1 style="color:#3ae; text-shadow: 1.5px 1.5px 1.5px black; font-family: Montserrat">Interested in Used and Vintage Instruments?</span></h1>
+                <a target="_blank" href="http://www.ebay.com/sch/i.html?LH_SpecificSeller=1&_sasl=sweetestsounds&_fss=1&_saslop=1&LH_PrefLoc=1&_armrs=1&_from=R6&_ipg=&_mPrRngCbx=1&_sargn=-1%252&_udhi=&_udlo=" class="ignite-btn">Check Out Our eBay!</a>
               </div>
             </div>
           </div>
@@ -438,7 +443,7 @@
           <div class="container">
             <div class="row">
               <div class="col-md-12">
-                <h1 class="arrow">Contact Us  <nobr style="font-size: 10px; color:#3dc9b3" rel="tooltip" title="Click on the address to open up Google Maps, click the phone numbers to call us, or on the email to open an email client.">(?)</nobr></h1>
+                <h1 class="arrow">Contact Us  <nobr style="font-size: 15px; color:#3ae" rel="tooltip" title="Click on the address to open up Google Maps, click the phone numbers to call us, or on the email to open an email client.">(?)</nobr></h1>
               </div>
             </div>
             <div class="row contact-details">
@@ -483,7 +488,7 @@
                 </ul> -->
               </div>
               <div class="col-md-6 credit">
-                <p>Rahul Desai © 2015</p>
+                <p>Sweetest Sounds © 2015</p>
 <!-- Designed &amp; Developed by <a href="http://www.peterfinlan.com/">Peter Finlan</a> exclusively for <a href="http://tympanus.net/codrops/"><em>Codrops</em></a></p> 
 Additional work by Rahul Desai - http://desair.strikingly.com -->
               </div>
