--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 <div class="features-wrapper">
                   <div class="col-md-4 wp2">
                     <div>
-                      <img src="img/instsale.jpg" alt="Instrument Sales" style="width:75%">
+                      <img src="instsale.jpg" alt="Instrument Sales" style="width:75%">
                     </div>
                     <h2>Instrument Sales &amp; Rentals</h2>
                     <p>We provide the highest quality, name-brand instruments for schools as well as individual players. We also sell new and used band instruments. Our rental selection includes Clarinets, Alto Saxes, Tenor Saxes, Soprano Saxes, Flutes, Snare Drum Kits, Trombones, Trumpets, Violins, and Guitars/Basses.</p>
@@ -161,7 +161,7 @@
                   </div>
                   <div class="col-md-4 wp2" style="margin-top:20px">
                     <div>
-                      <img src="img/audsale.jpg" alt="Audio Sales" style="width:75%">
+                      <img src="audsale.jpg" alt="Audio Sales" style="width:75%">
                     </div>
                     <h2>Pro Audio Sales</h2>
                     <p>Sweetest Sounds has a complete selection of microphones, speakers, mixers, and outboard gear as well as all the cables to make the necessary connections in-stock. Come down to our retail location to get a hands-on demo of our huge assortment of gear for your studio or band. We can help you get set up for whatever you have in mind, whether it's recording or performing.</p>
