--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               </div>
               <div class="row">
                 <div class="col-md-8 col-md-offset-2 text-center inner">
-                  <h1 class="animated fadeInDown" style="color:#3ae; font-family: Lato Heavy; text-shadow: 2px 1.5px 1.5px black "><b>SWEETEST SOUNDS <br style="padding-top:2px; color:#3ae">MUSIC CENTER</b></br></h1>
+                  <h1 class="animated fadeInDown" style="color:#3ae; font-family: Lato Heavy; text-shadow: 1px 1px 1px black "><b>SWEETEST SOUNDS <br style="padding-top:2px; color:#3ae">MUSIC CENTER</b></br></h1>
                   <p class="animated fadeInUp delay-05s" style="font-size:25px; color:#fff"><b>Teaching &amp; Equipping the Next Generation of <i>Rockstars</i></b></p>
                   <a style="margin-top:120px" href="#intro" class="down-arrow-btn"><i class="fa fa-chevron-down"></i></a>
                 </div>
@@ -146,15 +146,15 @@
                     <p>We provide the highest quality, name-brand instruments for schools as well as individual players. We also sell new and used band instruments. Our rental selection includes Clarinets, Alto Saxes, Tenor Saxes, Soprano Saxes, Flutes, Snare Drum Kits, Trombones, Trumpets, Violins, and Guitars/Basses.</p>
                   </div>
                   <div class="col-md-4 wp2 delay-05s">
-                    <div class="icon">
-                      <i class="fa fa-wrench shadow"></i>
+                    <div>
+                      <img src="3.jpg" alt="Instrument Repairs" style="width:75%">
                     </div>
                     <h2>Instrument Repairs</h2>
                     <p>Our team of experts can help you diagnose any problems with your instruments and then work with you to resolve the issue. We're happy to work on instruments purchased from us or other retailers. Our pricing is fair, our work is top-notch, and we are committed to customer satisfaction.</p>
                   </div>
                   <div class="col-md-4 wp2 delay-1s">
-                    <div class="icon">
-                      <i class="fa fa-graduation-cap shadow"></i>
+                    <div>
+                      <img src="lesson.jpg" alt="Music Lessons" style="width:75%">
                     </div>
                     <h2>Music Lessons</h2>
                     <p>The teachers at Sweetest Sounds Music Center can work with students of any level, from beginners wanting to learn the art of music to experienced players looking to brush up on theory. We have experienced teachers, affordable rates, and no registration fees. We look forward to helping you with your continuing music education.</p>
@@ -167,15 +167,15 @@
                     <p>Sweetest Sounds has a complete selection of microphones, speakers, mixers, and outboard gear as well as all the cables to make the necessary connections in-stock. Come down to our retail location to get a hands-on demo of our huge assortment of gear for your studio or band. We can help you get set up for whatever you have in mind, whether it's recording or performing.</p>
                   </div>
                    <div class="col-md-4 wp2 delay-05s" style="margin-top:20px">
-                    <div class="icon">
-                      <i class="fa fa-volume-up shadow"></i>
+                    <div>
+                      <img src="1.jpg" alt="Equipment Rentals" style="width:75%">
                     </div>
                     <h2>Equipment Rentals</h2>
                     <p>If you don't need to purchase professional-grade audio tools, you can just rent them from us. We have a complete line of PA equipment ready for your next gig or event. We provide the best audio equipment at a fraction of the regular cost. Please contact us for rates on everything from microphones and cables to powered mixers and speakers.</p>
                   </div>
                   <div class="col-md-4 wp2 delay-1s" style="margin-top:20px">
-                    <div class="icon">
-                      <i class="fa fa-bell shadow"></i>
+                    <div>
+                      <img src="2.jpg" alt="Accessories" style="width:75%">
                     </div>
                     <h2>Accessories</h2>
                     <p>We carry a complete inventory of strings for acoustic and electric guitars and basses as well as most other stringed instruments. We also have effects pedals from BOSS, Rocktron, Ibanez, and more, as well as straps, picks, and cases to keep your gear in the best shape possible. Finally, if you need a reed for a sax, clarinet, oboe, or bassoon, we have you covered. Stop by to see our huge selection of musical accessories.</p>
