--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                       <img src="3.jpg" alt="Instrument Repairs" style="width:75%">
                     </div>
                     <h2>Instrument Repairs</h2>
-                    <p>Our team of experts can help you diagnose any problems with your instruments and then work with you to resolve the issue. We're happy to work on instruments purchased from us or other retailers. Our pricing is fair, our work is top-notch, and we are committed to customer satisfaction.</p>
+                    <p>Our team of experts can help you diagnose any problems with your instruments and then work with you to resolve the issue. We're happy to work on all instruments purchased from us or other retailers. Our pricing is fair, our work is top-notch, and we are committed to customer satisfaction.</p>
                   </div>
                   <div class="col-md-4 wp2 delay-1s">
                     <div>
@@ -210,8 +210,8 @@
                         <p>We have a complete inventory of drums, cymbals, percussion, and accessories from Pearl, Tama, Zildjian, Sabian, Vic Firth, Pro Mark and many others. Additionally, our in-stock stick inventory is sure to have the perfect pair. Whether you're looking for an entry level kit or something to help get your sound to the next level, we have what you need. Stop by our store to see our complete inventory of percussion instruments.</p> 
                       </li>
                       <li>
-                        <h1 class="arrow">Keyboards &amp; Synthesizers  <nobr style="font-size: 15px; color:#3ae" rel="tooltip" title="Here's a quick glance at our keyboard and synth lineup.">(?)</nobr></h1>
-                        <p>We have an assortment of electric pianos and synthesizers for both beginners and professional musicians. Keyboards and synths are a great tool for bands, pianists, and composers. Stop by to see our complete selection of instruments.</p> 
+                        <h1 class="arrow">Electric Pianos &amp; Keyboards  <nobr style="font-size: 15px; color:#3ae" rel="tooltip" title="Here's a quick glance at our keyboard and synth lineup.">(?)</nobr></h1>
+                        <p>We have an assortment of electric pianos and synthesizers for both beginners and professional musicians. Keyboards and synths are a great tool for bands, pianists, and composers. Stop by to see our complete selection of instruments.</p>
                       </li>
                     </ul>
                   </div>
