--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                       <img src="instsale.JPG" alt="Instrument Sales" style="width:75%">
                     </div>
                     <h2>Instrument Sales &amp; Rentals</h2>
-                    <p>We provide the highest quality, name-brand instruments for schools as well as individual players. We also sell new and used band instruments. Our rental selection includes Clarinets, Alto Saxes, Tenor Saxes, Soprano Saxes, Flutes, Snare Drum Kits, Trombones, Trumpets, Violins, and Guitars/Basses.</p>
+                    <p>We provide the highest quality, name-brand instruments for schools as well as individual players. We also sell new and used band instruments. Our rental selection includes Clarinets, Alto Saxes, Tenor Saxes, Soprano Saxes, Flutes, Snare Drum Kits, Trombones, Trumpets, and Violins.</p>
                   </div>
                   <div class="col-md-4 wp2 delay-05s">
                     <div>
