--- a/index.html
+++ b/index.html
@@ -157,14 +157,14 @@
                       <img src="lesson.jpg" alt="Music Lessons" style="width:75%">
                     </div>
                     <h2>Music Lessons</h2>
-                    <p>The teachers at Sweetest Sounds Music Center can work with students of any level, from beginners wanting to learn the art of music to experienced players looking to brush up on theory. We have experienced teachers, affordable rates, and no registration fees. We look forward to helping you with your continuing music education.</p>
+                    <p>The teachers at Sweetest Sounds Music Center can work with students of any level, from beginners wanting to learn the art of music to experienced players looking to brush up on theory. <b>We have experienced teachers, affordable rates, and no registration fees.</b> We look forward to helping you with your continuing music education.</p>
                   </div>
                   <div class="col-md-4 wp2" style="margin-top:20px">
                     <div>
                       <img src="audsale.JPG" alt="Audio Sales" style="width:75%">
                     </div>
                     <h2>Pro Audio Sales</h2>
-                    <p>Sweetest Sounds has a complete selection of microphones, speakers, mixers, and power amps as well as all the cables to make the necessary connections in-stock. Come down to our retail location to get a hands-on demo of our huge assortment of gear for your studio or band. We can help you get set up for whatever you have in mind, whether it's recording or performing.</p>
+                    <p>Sweetest Sounds has a complete selection of microphones, speakers, mixers, and power amps as well as all the cables to make the necessary connections in-stock. <b>Come down to our retail location to get a hands-on demo of our huge assortment of gear for your studio or band.</b> We can help you get set up for whatever you have in mind, whether it's recording or performing.</p>
                   </div>
                    <div class="col-md-4 wp2 delay-05s" style="margin-top:20px">
                     <div>
