--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                       <img src="2.jpg" alt="Accessories" style="width:75%">
                     </div>
                     <h2>Accessories</h2>
-                    <p>We carry a complete inventory of strings for acoustic and electric guitars and basses as well as most other stringed instruments. We also have effects pedals from BOSS, Rocktron, Ibanez, and more, as well as straps, picks, and cases to keep your gear in the best shape possible. Finally, if you need a reed for a sax, clarinet, oboe, or bassoon, we have you covered. Stop by to see our huge selection of musical accessories.</p>
+                    <p>We carry a complete inventory of strings for acoustic and electric guitars and basses as well as most other stringed instruments. We also have effects pedals from BOSS, Digitech, Ibanez, and more, as well as straps, picks, and cases to keep your gear in the best shape possible. Finally, if you need a reed for a sax, clarinet, oboe, or bassoon, we have you covered. Stop by to see our huge selection of musical accessories.</p>
                   </div>
 
                   <div class="clearfix"></div>
@@ -210,8 +210,8 @@
                         <p>We have a complete inventory of drums, cymbals, percussion, and accessories from Pearl, Tama, Zildjian, Sabian, Vic Firth, Pro Mark and many others. Additionally, our in-stock stick inventory is sure to have the perfect pair. Whether you're looking for an entry level kit or something to help get your sound to the next level, we have what you need. Stop by our store to see our complete inventory of percussion instruments.</p> 
                       </li>
                       <li>
-                        <h1 class="arrow">Electric Pianos &amp; Keyboards  <nobr style="font-size: 15px; color:#3ae" rel="tooltip" title="Here's a quick glance at our keyboard and synth lineup.">(?)</nobr></h1>
-                        <p>We have an assortment of electric pianos and synthesizers for both beginners and professional musicians. Keyboards and synths are a great tool for bands, pianists, and composers. Stop by to see our complete selection of instruments.</p>
+                        <h1 class="arrow">Electric Pianos &amp; Keyboards  <nobr style="font-size: 15px; color:#3ae" rel="tooltip" title="Here's a quick glance at our keyboard lineup.">(?)</nobr></h1>
+                        <p>We have an assortment of electric pianos and keyboards for both beginners and professional musicians. Keyboards and electric pianos are a great tool for bands, pianists, and composers. Stop by to see our complete selection of instruments.</p>
                       </li>
                     </ul>
                   </div>
